--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@mdi/font": "^7.1.96",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuetify": "^3.1.6"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
@@ -30,6 +32,7 @@
     "prettier": "^2.8.4",
     "start-server-and-test": "^1.15.4",
     "vite": "^4.1.3",
+    "vite-plugin-vuetify": "^1.0.2",
     "vitest": "^0.28.5"
   }
 }
